@@ -4,7 +4,9 @@ import java.lang.reflect.Method;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 
-
+/**
+ * {@link Incrementor} implementation for any {@link java.lang.Number}.
+ */
 public class NumberIncrementor implements Incrementor<java.lang.Number> {
 
 	java.lang.Number passe;
@@ -22,35 +24,75 @@ public class NumberIncrementor implements Incrementor<java.lang.Number> {
 		} 
 	}
 
-	public java.lang.Number increment(Byte b){
-		return new Byte((byte)(b.byteValue()+passe.byteValue()));
+	/**
+	 * Inrement a byte value
+	 * @param b the byte value to increment
+	 * @return the next byte in ascending order
+	 */
+	protected java.lang.Number increment(Byte b){
+		return Byte.valueOf((byte)(b.byteValue()+passe.byteValue()));
 	}
 	
-	public java.lang.Number increment(java.lang.Integer b){
-		return new java.lang.Integer(b.intValue()+passe.intValue());
+	/**
+	 * Inrement an integer value
+	 * @param b the integer value to increment
+	 * @return the next integer in ascending order
+	 */
+	protected java.lang.Number increment(java.lang.Integer b){
+		return  java.lang.Integer.valueOf(b.intValue()+passe.intValue());
 	}
 	
-	public java.lang.Number increment(Short b){
-		return new Short((short)(b.shortValue()+passe.shortValue()));
+	/**
+	 * Inrement a short value
+	 * @param b the short value to increment
+	 * @return the next short in ascending order
+	 */
+	protected java.lang.Number increment(Short b){
+		return Short.valueOf((short)(b.shortValue()+passe.shortValue()));
 	}
 	
-	public java.lang.Number increment(Long b){
-		return new Long(b.longValue()+passe.longValue());
+	/**
+	 * Inrement a long value
+	 * @param b the long value to increment
+	 * @return the next long in ascending order
+	 */
+	protected java.lang.Number increment(Long b){
+		return Long.valueOf(b.longValue()+passe.longValue());
 	}
 	
-	public java.lang.Number increment(Double b){
-		return  new Double(b.doubleValue()+passe.doubleValue());
+	/**
+	 * Inrement a double value
+	 * @param b the double value to increment
+	 * @return the next double in ascending order
+	 */
+	protected java.lang.Number increment(Double b){
+		return  Double.valueOf(b.doubleValue()+passe.doubleValue());
 	}
 	
-	public java.lang.Number increment(Float b){
-		return  new Float(b.floatValue()+passe.floatValue());
+	/**
+	 * Inrement a float value
+	 * @param b the float value to increment
+	 * @return the next float in ascending order
+	 */
+	protected java.lang.Number increment(Float b){
+		return  Float.valueOf(b.floatValue()+passe.floatValue());
 	}
 	
-	public java.lang.Number increment(BigDecimal b){
+	/**
+	 * Inrement a {@link BigDecimal} value
+	 * @param b the {@link BigDecimal} value to increment
+	 * @return the next {@link BigDecimal} in ascending order
+	 */
+	protected java.lang.Number increment(BigDecimal b){
 		return  ((BigDecimal)b).add(new BigDecimal(passe.toString()));
 	}
 	
-	public java.lang.Number increment(BigInteger b){
+	/**
+	 * Inrement a {@link BigInteger} value
+	 * @param b the {@link BigInteger} value to increment
+	 * @return the next {@link BigInteger} in ascending order
+	 */
+	protected java.lang.Number increment(BigInteger b){
 		return  ((BigInteger)b).add(new BigInteger(passe.toString()));
 	}
 }
